<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_new_wallet">

        <TextView
            android:id="@+id/text_transfer_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="monospace"
            android:text="@string/text_creating_transaction"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/text_pending_amount"
            app:layout_constraintEnd_toStartOf="@+id/progressBar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/text_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_amount"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/text_pending_amount"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_pending_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/text_pending_fee"
            app:layout_constraintEnd_toEndOf="@+id/text_pending_fee"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_amount_label" />

        <TextView
            android:id="@+id/text_fee_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_transaction_for_a_fee_of"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/text_transfer_password"
            app:layout_constraintStart_toEndOf="@+id/text_transfer_plus" />

        <TextView
            android:id="@+id/text_pending_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/text_transfer_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_amount_label" />

        <EditText
            android:id="@+id/text_transfer_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/text_pin"
            android:inputType="numberPassword"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/button_confirm_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_confirm_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_confirm"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_transfer_info"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_transfer_plus"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/text_fee_label"
            app:layout_constraintStart_toStartOf="@+id/text_amount_label"
            app:layout_constraintTop_toTopOf="@+id/text_fee_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>