<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_send"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:checkedButton="@id/radio_auto"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_start_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Low" />

        <RadioButton
            android:id="@+id/radio_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Automatic" />

        <RadioButton
            android:id="@+id/radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="High" />
    </RadioGroup>

    <EditText
        android:id="@+id/transfer_recipient_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|top"
        android:hint="@string/text_recipient_address"
        android:inputType="textVisiblePassword|textMultiLine"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/transfer_amount_info"
        app:layout_constraintEnd_toStartOf="@+id/button_send_qr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/transfer_amount_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_amount"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_payment_id"
        app:layout_constraintEnd_toStartOf="@+id/button_zeros"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_payment_id"
        style="@android:style/Widget.Material.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/text_requires_payment_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_start_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_start_transaction" />

    <EditText
        android:id="@+id/text_payment_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|top"
        android:hint="@string/text_requires_payment_id"
        android:inputType="textVisiblePassword"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_start_transaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="createTransaction"
        android:text="@string/button_continue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        android:id="@+id/rv_send_contact_list"
        layout="@layout/layout_contact_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/transfer_recipient_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_send_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/transfer_recipient_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/button_zeros"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        app:layout_constraintBottom_toTopOf="@+id/text_payment_id"
        app:layout_constraintEnd_toEndOf="@+id/button_send_qr"
        app:layout_constraintStart_toStartOf="@+id/button_send_qr"
        app:layout_constraintTop_toBottomOf="@+id/transfer_recipient_info" />

</androidx.constraintlayout.widget.ConstraintLayout>